[package]
name = "gapi-oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["default", "blocking", "cookies", "json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", festure = ["derive"]}
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "8.3.0"
chrono = "0.4.26"
url = "2.4.0"
async-std = "1.12.0"
